@@ -62,6 +62,11 @@ New in this Isabelle version
       transp_on_multp
 
 
+*** Pure ***
+
+* Added configuration option for unifier tracing, which is now disabled by default.
+
+
 *** ML ***
 
 * ML antiquotation "try" provides variants of exception handling that
